# tessera

./: .gitignore  .pre-commit-config.yaml  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  SEED_CONTEXT.md  SPECS_BUILD.md  TESTING_STRATEGY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
specs/: 01-vision-and-scope.md  02-glossary.md  03-threat-model.md  04-system-architecture.md  05-wire-protocol-addendum.md  06-content-addressing.md  07-swarm-and-peer-discovery.md  08-piece-selection-and-transfer.md  09-ai-integration.md  10-api-and-cli.md  11-storage-and-state.md  12-performance-budget.md  13-test-and-validation.md  draft.md
tessera/: __init__.py  __main__.py  cli.py  config.py  errors.py  metadata.py  node.py  types.py
tessera/bridge/: __init__.py  bridge.py  discovery_adapter.py  moderation_adapter.py  ranking_adapter.py  sanitizer.py  selection_adapter.py
tessera/content/: bitfield.py  chunker.py  manifest.py  merkle.py
tessera/discovery/: backend.py  client.py  tracker.py
tessera/storage/: gc.py  layout.py  manifest_store.py  state.py  tessera_store.py
tessera/swarm/: capacity.py  connector.py  partition.py  registry.py
tessera/transfer/: assembler.py  endgame.py  pipeline.py  scheduler.py  scorer.py  verifier.py
tessera/wire/: errors.py  messages.py  state_machine.py
tests/: conftest.py  fixtures.py  test_cli.py  test_cli_coverage_gaps.py
tests/adversarial/: test_bandwidth_exhaustion.py  test_crash_recovery.py  test_crash_recovery_ext.py  test_discovery_poisoning.py  test_manifest_tampering.py  test_manifest_tampering_ext.py  test_piece_poisoning.py  test_piece_poisoning_ext.py  test_prompt_injection.py  test_protocol_violations.py  test_sybil.py  test_transfer_errors.py  test_withholding.py
tests/ai/: test_bridge.py  test_bridge_adapters.py  test_degradation.py  test_discovery_adapter.py  test_moderation_adapter.py  test_ranking_adapter.py  test_sanitizer.py  test_selection_adapter.py
tests/benchmarks/: bench_assembly.py  bench_chunking.py  bench_hash.py  bench_memory.py  bench_multi_peer.py  bench_publish_latency.py  bench_resume.py  bench_single_peer.py
tests/e2e/: test_cancel_resume.py  test_large_file.py  test_multi_seeder.py  test_node_coverage_gaps.py  test_node_lifecycle.py  test_single_transfer.py
tests/integration/: test_agent_data_plane.py  test_connector.py  test_coverage_gaps.py  test_fetch_assembly.py  test_gc.py  test_gc_ext.py  test_layout.py  test_manifest_index.py  test_manifest_store_ext.py  test_publish_flow.py  test_state.py  test_storage_concurrency.py  test_swarm.py  test_tessera_store.py  test_transfer_state.py  test_write_failure_recovery.py
tests/unit/: test_bitfield.py  test_capacity.py  test_chunker.py  test_config.py  test_coverage_gaps.py  test_discovery_client.py  test_errors.py  test_import.py  test_manifest.py  test_merkle.py  test_messages.py  test_metadata.py  test_partition.py  test_pipeline.py  test_registry.py  test_scheduler.py  test_scorer.py  test_tracker.py  test_watch_handle.py
