[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera"
version = "1.0.0"
description = "Secure peer-to-peer file sharing built on MFP and madakit"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Akil Abderrahim"}]
readme = "README.md"
keywords = ["p2p", "file-sharing", "encryption", "mfp", "swarm", "ai", "distributed"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: File Sharing",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "pymfp>=1.0.0",
]

[project.optional-dependencies]
ai = ["madakit>=1.0.0"]
tracker = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "madakit>=1.0.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Madahub-dev/tessera"
Repository = "https://github.com/Madahub-dev/tessera.git"
Documentation = "https://github.com/Madahub-dev/tessera/tree/main/specs"
"Issue Tracker" = "https://github.com/Madahub-dev/tessera/issues"
Changelog = "https://github.com/Madahub-dev/tessera/blob/main/CHANGELOG.md"

[project.scripts]
tessera = "tessera.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tessera*"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line length — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["tessera"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — strict static typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pymfp.*", "madakit.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
addopts = "--tb=short -q"
markers = [
    "unit: unit tests (no I/O, no MFP)",
    "integration: integration tests (real filesystem)",
    "e2e: end-to-end tests (multi-node, MFP loopback)",
    "adversarial: adversarial and fault injection tests",
    "benchmark: performance benchmarks",
    "slow: tests taking > 30s",
    "ai: AI adapter tests (mock LLM)",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["tessera"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.\\s*$",
]
